Project

General

Profile

Actions

Bug #21253

closed

Prometheus crash when update

Added by Ji You over 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
prometheus module
Target version:
% Done:

0%

Source:
Tags:
Backport:
luminous
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

 ceph version 12.2.0 (32ce2a3ae5239ee33d6150705cdb24d43bab910c) luminous (rc)
 1: (()+0x3c22d9) [0x7f5eeb5502d9]
 2: (()+0x10340) [0x7f5ee99ee340]
 3: (gsignal()+0x39) [0x7f5ee8a09cc9]
 4: (abort()+0x148) [0x7f5ee8a0d0d8]
 5: (__gnu_cxx::__verbose_terminate_handler()+0x155) [0x7f5ee9314535]
 6: (()+0x5e6d6) [0x7f5ee93126d6]
 7: (()+0x5e703) [0x7f5ee9312703]
 8: (()+0x5e922) [0x7f5ee9312922]
 9: (std::__throw_out_of_range(char const*)+0x67) [0x7f5ee9364427]
 10: (DaemonStateIndex::get(std::pair<std::string, std::string> const&)+0x12c) [0x7f5eeb42116c]
 11: (PyModules::get_counter_python(std::string const&, std::string const&, std::string const&, std::string const&)+0x98) [0x7f5eeb4489e8]
 12: (()+0x2c4962) [0x7f5eeb452962]
 13: (PyEval_EvalFrameEx()+0x4bd4) [0x7f5eeab920d4]
 14: (PyEval_EvalFrameEx()+0x4b59) [0x7f5eeab92059]
 15: (PyEval_EvalFrameEx()+0x4b59) [0x7f5eeab92059]
 16: (PyEval_EvalFrameEx()+0x4b59) [0x7f5eeab92059]
 17: (PyEval_EvalFrameEx()+0x4b59) [0x7f5eeab92059]
 18: (PyEval_EvalCodeEx()+0x80d) [0x7f5eeab9354d]
 19: (()+0x1c37a5) [0x7f5eeabc87a5]
 20: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 21: (PyEval_EvalFrameEx()+0xeb1) [0x7f5eeab8e3b1]
 22: (PyEval_EvalCodeEx()+0x80d) [0x7f5eeab9354d]
 23: (()+0x1c37a5) [0x7f5eeabc87a5]
 24: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 25: (()+0xbb7bd) [0x7f5eeaac07bd]
 26: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 27: (()+0x1347e5) [0x7f5eeab397e5]
 28: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 29: (PyEval_EvalFrameEx()+0xeb1) [0x7f5eeab8e3b1]
 30: (PyEval_EvalCodeEx()+0x80d) [0x7f5eeab9354d]
 31: (()+0x1c36d0) [0x7f5eeabc86d0]
 32: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 33: (()+0xbb7bd) [0x7f5eeaac07bd]
 34: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 35: (()+0xda938) [0x7f5eeaadf938]
 36: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 37: (PyEval_EvalFrameEx()+0x2316) [0x7f5eeab8f816]
 38: (PyEval_EvalFrameEx()+0x4b59) [0x7f5eeab92059]
 39: (PyEval_EvalFrameEx()+0x4b59) [0x7f5eeab92059]
 40: (PyEval_EvalFrameEx()+0x4b59) [0x7f5eeab92059]
 41: (PyEval_EvalCodeEx()+0x80d) [0x7f5eeab9354d]
 42: (()+0x1c36d0) [0x7f5eeabc86d0]
 43: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 44: (()+0xbb7bd) [0x7f5eeaac07bd]
 45: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 46: (()+0x13467f) [0x7f5eeab3967f]
 47: (()+0x13268f) [0x7f5eeab3768f]
 48: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 49: (PyEval_EvalFrameEx()+0x2316) [0x7f5eeab8f816]
 50: (PyEval_EvalFrameEx()+0x4b59) [0x7f5eeab92059]
 51: (PyEval_EvalCodeEx()+0x80d) [0x7f5eeab9354d]
 52: (()+0x1c37a5) [0x7f5eeabc87a5]
 53: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 54: (()+0xbb7bd) [0x7f5eeaac07bd]
 55: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 56: (()+0x1347e5) [0x7f5eeab397e5]
 57: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 58: (PyEval_EvalFrameEx()+0xeb1) [0x7f5eeab8e3b1]
 59: (PyEval_EvalCodeEx()+0x80d) [0x7f5eeab9354d]
 60: (PyEval_EvalFrameEx()+0x48d8) [0x7f5eeab91dd8]
 61: (PyEval_EvalCodeEx()+0x80d) [0x7f5eeab9354d]
 62: (()+0x1c36d0) [0x7f5eeabc86d0]
 63: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 64: (()+0xbb7bd) [0x7f5eeaac07bd]
 65: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 66: (()+0x13467f) [0x7f5eeab3967f]
 67: (()+0x13268f) [0x7f5eeab3768f]
 68: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 69: (PyEval_EvalFrameEx()+0x2316) [0x7f5eeab8f816]
 70: (PyEval_EvalCodeEx()+0x80d) [0x7f5eeab9354d]
 71: (()+0x1c36d0) [0x7f5eeabc86d0]
 72: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 73: (()+0xbb7bd) [0x7f5eeaac07bd]
 74: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 75: (()+0x1347e5) [0x7f5eeab397e5]
 76: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 77: (PyEval_EvalFrameEx()+0x2316) [0x7f5eeab8f816]
 78: (PyEval_EvalCodeEx()+0x80d) [0x7f5eeab9354d]
 79: (()+0x1c36d0) [0x7f5eeabc86d0]
 80: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 81: (()+0xbb7bd) [0x7f5eeaac07bd]
 82: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 83: (()+0x1347e5) [0x7f5eeab397e5]
 84: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 85: (PyEval_EvalFrameEx()+0x2316) [0x7f5eeab8f816]
 86: (PyEval_EvalCodeEx()+0x80d) [0x7f5eeab9354d]
 87: (()+0x1c36d0) [0x7f5eeabc86d0]
 88: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 89: (()+0xbb7bd) [0x7f5eeaac07bd]
 90: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 91: (()+0x1347e5) [0x7f5eeab397e5]
 92: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 93: (PyEval_EvalFrameEx()+0x2316) [0x7f5eeab8f816]
 94: (PyEval_EvalCodeEx()+0x80d) [0x7f5eeab9354d]
 95: (()+0x1c36d0) [0x7f5eeabc86d0]
 96: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 97: (()+0xbb7bd) [0x7f5eeaac07bd]
 98: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 99: (()+0x1347e5) [0x7f5eeab397e5]
 100: (PyObject_Call()+0x43) [0x7f5eeab34d43]
 NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.

--- logging levels ---
   0/ 5 none
   0/ 1 lockdep
   0/ 1 context
   1/ 1 crush
   1/ 5 mds
   1/ 5 mds_balancer
   1/ 5 mds_locker
   1/ 5 mds_log
   1/ 5 mds_log_expire
   1/ 5 mds_migrator
   0/ 1 buffer
   0/ 1 timer
   0/ 1 filer
   0/ 1 striper
   0/ 1 objecter
   0/ 5 rados
   0/ 5 rbd
   0/ 5 rbd_mirror
   0/ 5 rbd_replay
   0/ 5 journaler
   0/ 5 objectcacher
   0/ 5 client
   1/ 5 osd
   0/ 5 optracker
   0/ 5 objclass
   1/ 3 filestore
   1/ 3 journal
   0/ 5 ms
   1/ 5 mon
   0/10 monc
   1/ 5 paxos
   0/ 5 tp
   1/ 5 auth
   1/ 5 crypto
   1/ 1 finisher
   1/ 5 heartbeatmap
   1/ 5 perfcounter
   1/ 5 rgw
   1/10 civetweb
   1/ 5 javaclient
   1/ 5 asok
   1/ 1 throttle
   0/ 0 refs
   1/ 5 xio
   1/ 5 compressor
   1/ 5 bluestore
   1/ 5 bluefs
   1/ 3 bdev
   1/ 5 kstore
   4/ 5 rocksdb
   4/ 5 leveldb
   4/ 5 memdb
   1/ 5 kinetic
   1/ 5 fuse
   1/ 5 mgr
   1/ 5 mgrc
   1/ 5 dpdk
   1/ 5 eventtrace
  -2/-2 (syslog threshold)
  -1/-1 (stderr threshold)
  max_recent     10000
  max_new         1000
  log_file /var/log/ceph/pre-prod-mgr.slx03c-5zkd.log
--- end dump of recent events ---

debug with core dump

#117 0x00007f28ad2e447d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111
(gdb) f 13
#13 0x00007f28afc5f9e8 in PyModules::get_counter_python (this=0x7f28b9c36b18, handle=..., svc_name=..., svc_id=..., path=...) at /build/ceph-12.2.0/src/mgr/PyModules.cc:681
681    /build/ceph-12.2.0/src/mgr/PyModules.cc: No such file or directory.
(gdb) l
676    in /build/ceph-12.2.0/src/mgr/PyModules.cc
(gdb) p
The history is empty.
(gdb) p handle
$1 = (const std::string &) @0x7f2897fe9f00: {static npos = <optimized out>,
  _M_dataplus = {<std::allocator<char>> = {<__gnu_cxx::new_allocator<char>> = {<No data fields>}, <No data fields>}, _M_p = 0x7f28c3013f18 "prometheus"}}
(gdb) p svc_name
$2 = (const std::string &) @0x7f2897fe9f10: {static npos = <optimized out>,
  _M_dataplus = {<std::allocator<char>> = {<__gnu_cxx::new_allocator<char>> = {<No data fields>}, <No data fields>}, _M_p = 0x7f28c852b978 "osd"}}
(gdb) p svc_id
$3 = (const std::string &) @0x7f2897fe9f20: {static npos = <optimized out>,
  _M_dataplus = {<std::allocator<char>> = {<__gnu_cxx::new_allocator<char>> = {<No data fields>}, <No data fields>}, _M_p = 0x7f28b9e5d858 "543"}}
(gdb)

Related issues 2 (0 open2 closed)

Has duplicate mgr - Bug #21890: ceph manager SIGABRTDuplicate10/23/2017

Actions
Copied to mgr - Backport #21443: luminous: Prometheus crash when updateResolvedNathan CutlerActions
Actions #1

Updated by Ji You over 6 years ago

when mgr service is running, refresh the prometheus:9283 mutiple times, then it would crash with this error.

Actions #2

Updated by John Spray over 6 years ago

  • Status changed from New to Fix Under Review
  • Backport set to luminous
Actions #3

Updated by Kefu Chai over 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler over 6 years ago

Actions #5

Updated by John Spray over 6 years ago

  • Has duplicate Bug #21890: ceph manager SIGABRT added
Actions #6

Updated by John Spray about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF