mgr: fix py calls for dne service perf counters

Fixes: http://tracker.ceph.com/issues/21253
Signed-off-by: John Spray <john.spray@redhat.com>